ensure no matter how small the view - the left card does not slide off the view and gaps remain uniform on wide screens

--- a/express/code/blocks/discover-cards/discover-cards.css
+++ b/express/code/blocks/discover-cards/discover-cards.css
@@ -50,7 +50,7 @@ main .section .discover-cards {
 .discover-cards.more h2 {
   font-size: 22px;
 }
-/* Default for small screens - left aligned */
+/* Default style - centered */
 .discover-cards.more .cards-container.gallery {
   display: grid;
   grid-auto-flow: column;
@@ -62,18 +62,18 @@ main .section .discover-cards {
   scroll-behavior: smooth;
   padding: 0 16px;
   margin-top: 32px;
-  justify-content: start;  /* Start from left on small screens */
-  width: 100%;
+  justify-content: center;
+  width: fit-content;
   max-width: 100vw;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-/* Center cards on wider screens */
-@media (min-width: 1200px) {
+/* Switch to left-aligned on smaller screens */
+@media (max-width: 1050px) {
   .discover-cards.more .cards-container.gallery {
-    justify-content: center;
-    width: fit-content;
-    margin-left: auto;
-    margin-right: auto;
+    justify-content: start;
+    width: 100%;
   }
 }
 
@@ -338,7 +338,6 @@ main .section .discover-cards {
   font-size: 16px;
 }
 
-/* Hide scrollbar */
 .discover-cards.more .flip-card-back .scrollable-content::-webkit-scrollbar {
   display: none;
 }
@@ -372,7 +371,6 @@ main .section .discover-cards {
   height: 12px;
 }
 
-/* Create a container for the minus icon to keep it fixed */
 .discover-cards.more .minus-icon-wrapper {
   position: absolute;
   bottom: 16px;
